--- a/f1/index.html
+++ b/f1/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./font/style.css" />
     <title>Document</title>
   </head>
   <body>
@@ -23,7 +24,7 @@
       <!-- search -->
       <div class="search">
         <input type="text" placeholder="Inserte una palabra clave" />
-        <button></button>
+        <button><span class="iccc"></span></button>
       </div>
       <!-- user -->
       <div class="user">
@@ -98,8 +99,169 @@
         <li><a href=""> Vuejs </a></li>
         <li><a href=""> Reactjs </a></li>
         <li><a class="last" href=""> Vuejs </a></li>
+        <li><a href=""> Reactjs </a></li>
+        <li><a class="last" href=""> Vuejs </a></li>
+        <li><a href=""> Reactjs </a></li>
       </ul>
       <a class="mod" href="">More</a>
+    </div>
+
+    <!-- box -->
+    <div class="box w">
+      <div class="box-hd">
+        <h3>Section</h3>
+        <a href="">More</a>
+      </div>
+      <div class="box-bd">
+        <ul>
+          <li>
+            <div class="img"></div>
+            <h4>Title</h4>
+            <div class="info"><p>AAA + 123CCC</p></div>
+          </li>
+          <li>
+            <div class="img"></div>
+            <h4>Title</h4>
+            <div class="info"><p>AAA + 123CCC</p></div>
+          </li>
+          <li>
+            <div class="img"></div>
+            <h4>Title</h4>
+            <div class="info"><p>AAA + 123CCC</p></div>
+          </li>
+          <li>
+            <div class="img"></div>
+            <h4>Title</h4>
+            <div class="info"><p>AAA + 123CCC</p></div>
+          </li>
+          <li>
+            <div class="img"></div>
+            <h4>Title</h4>
+            <div class="info"><p>AAA + 123CCC</p></div>
+          </li>
+          <li>
+            <div class="img"></div>
+            <h4>Title</h4>
+            <div class="info"><p>AAA + 123CCC</p></div>
+          </li>
+          <li>
+            <div class="img"></div>
+            <h4>Title</h4>
+            <div class="info"><p>AAA + 123CCC</p></div>
+          </li>
+          <li>
+            <div class="img"></div>
+            <h4>Title</h4>
+            <div class="info"><p>AAA + 123CCC</p></div>
+          </li>
+          <li>
+            <div class="img"></div>
+            <h4>Title</h4>
+            <div class="info"><p>AAA + 123CCC</p></div>
+          </li>
+          <li>
+            <div class="img"></div>
+            <h4>Title</h4>
+            <div class="info"><p>AAA + 123CCC</p></div>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- box2 -->
+    <div class="box2 w">
+      <div class="box2-hd">
+        <h3>Section</h3>
+        <a href="">More</a>
+      </div>
+      <div class="box2-bd">
+        <div class="leftBar"></div>
+        <ul>
+          <li>
+            <div class="img"></div>
+            <h4>Title</h4>
+            <div class="info"><p>AAA + 123CCC</p></div>
+          </li>
+          <li>
+            <div class="img"></div>
+            <h4>Title</h4>
+            <div class="info"><p>AAA + 123CCC</p></div>
+          </li>
+          <li>
+            <div class="img"></div>
+            <h4>Title</h4>
+            <div class="info"><p>AAA + 123CCC</p></div>
+          </li>
+          <li>
+            <div class="img"></div>
+            <h4>Title</h4>
+            <div class="info"><p>AAA + 123CCC</p></div>
+          </li>
+          <li>
+            <div class="img"></div>
+            <h4>Title</h4>
+            <div class="info"><p>AAA + 123CCC</p></div>
+          </li>
+          <li>
+            <div class="img"></div>
+            <h4>Title</h4>
+            <div class="info"><p>AAA + 123CCC</p></div>
+          </li>
+          <li>
+            <div class="img"></div>
+            <h4>Title</h4>
+            <div class="info"><p>AAA + 123CCC</p></div>
+          </li>
+          <li>
+            <div class="img"></div>
+            <h4>Title</h4>
+            <div class="info"><p>AAA + 123CCC</p></div>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- box3 -->
+
+    <div class="box3 w">
+      <div class="box3-hd">
+        <h3>Section</h3>
+        <ul>
+          <li><a href="">Link</a></li>
+          <li><a href="">Link</a></li>
+          <li><a href="">Link</a></li>
+          <li><a href="">Link</a></li>
+        </ul>
+        <a class="box3_link" href="">More</a>
+      </div>
+      <div class="box3-bd">
+        <div class="leftBar"></div>
+        <div class="cont">
+          <div class="cont_hd"></div>
+          <ul>
+            <li>
+              <div class="img"></div>
+              <h4>Title</h4>
+              <div class="info"><p>AAA + 123CCC</p></div>
+            </li>
+            <li>
+              <div class="img"></div>
+              <h4>Title</h4>
+              <div class="info"><p>AAA + 123CCC</p></div>
+            </li>
+            <li>
+              <div class="img"></div>
+              <h4>Title</h4>
+              <div class="info"><p>AAA + 123CCC</p></div>
+            </li>
+            <li>
+              <div class="img"></div>
+              <h4>Title</h4>
+              <div class="info"><p>AAA + 123CCC</p></div>
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
   </body>
 </html>
