fin de la sección common

--- a/f2/index.html
+++ b/f2/index.html
@@ -90,10 +90,181 @@
       <div class="w">
         <div class="dropDown">
           <div class="dt">Titulo</div>
-          <div class="dd">Description</div>
+          <div class="dd">
+            <ul>
+              <li>
+                <a href="">Item1</a>
+                <a href="">Item2</a>
+                <a href="">Item3</a>
+              </li>
+              <li>
+                <a href="">Item3</a>
+                <a href="">Item4</a>
+              </li>
+              <li>
+                <a href="">Item，Item，Item </a>
+              </li>
+              <li>
+                <a href="">Item，Item，Item</a>
+              </li>
+              <li>
+                <a href="">Item，Item，Item</a>
+              </li>
+              <li>
+                <a href="">Item，Item，Item，Item</a>
+              </li>
+              <li>
+                <a href="">Item，Item，Item，Item</a>
+              </li>
+              <li>
+                <a href="">Item，Item，Item</a>
+              </li>
+              <li>
+                <a href="">Item，Item，Item</a>
+              </li>
+              <li>
+                <a href="">Item，Item，Item，Item</a>
+              </li>
+              <li>
+                <a href="">Item，Item，Item</a>
+              </li>
+              <li>
+                <a href="">Item，Item，Item</a>
+              </li>
+              <li>
+                <a href="">Item，Item，Item</a>
+              </li>
+              <li>
+                <a href="">Item，Item，Item</a>
+              </li>
+              <li>
+                <a href="">Item，Item，Item</a>
+              </li>
+            </ul>
+          </div>
         </div>
-        <div class="navItems">qwe</div>
+        <div class="navItems">
+          <ul>
+            <li><a href="">Link1</a></li>
+            <li><a href="">Link1</a></li>
+            <li><a href="">Link1</a></li>
+            <li><a href="">Link1</a></li>
+            <li><a href="">Link1</a></li>
+            <li><a href="">Link1</a></li>
+            <li><a href="">Link1</a></li>
+            <li><a href="">Link1</a></li>
+          </ul>
+        </div>
       </div>
     </nav>
+
+    <footer class="footer">
+      <div class="w">
+        <div class="modService">
+          <ul>
+            <li>
+              <h5>Img</h5>
+              <div class="serviceTxt">
+                <h4>Título</h4>
+                <p>Descripción</p>
+              </div>
+            </li>
+            <li>
+              <h5>Img</h5>
+              <div class="serviceTxt">
+                <h4>Título</h4>
+                <p>Descripción</p>
+              </div>
+            </li>
+            <li>
+              <h5>Img</h5>
+              <div class="serviceTxt">
+                <h4>Título</h4>
+                <p>Descripción</p>
+              </div>
+            </li>
+            <li>
+              <h5>Img</h5>
+              <div class="serviceTxt">
+                <h4>Título</h4>
+                <p>Descripción</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+
+        <div class="modHelp">
+          <dl>
+            <dt>Información</dt>
+            <dd><a href="">Infor1</a></dd>
+            <dd><a href="">Infor2</a></dd>
+            <dd><a href="">Infor3</a></dd>
+            <dd><a href="">Infor4</a></dd>
+            <dd><a href="">Infor5</a></dd>
+            <dd><a href="">Infor6</a></dd>
+          </dl>
+          <dl>
+            <dt>Información</dt>
+            <dd><a href="">Infor1</a></dd>
+            <dd><a href="">Infor2</a></dd>
+            <dd><a href="">Infor3</a></dd>
+            <dd><a href="">Infor4</a></dd>
+            <dd><a href="">Infor5</a></dd>
+            <dd><a href="">Infor6</a></dd>
+          </dl>
+          <dl>
+            <dt>Información</dt>
+            <dd><a href="">Infor1</a></dd>
+            <dd><a href="">Infor2</a></dd>
+            <dd><a href="">Infor3</a></dd>
+            <dd><a href="">Infor4</a></dd>
+            <dd><a href="">Infor5</a></dd>
+            <dd><a href="">Infor6</a></dd>
+          </dl>
+          <dl>
+            <dt>Información</dt>
+            <dd><a href="">Infor1</a></dd>
+            <dd><a href="">Infor2</a></dd>
+            <dd><a href="">Infor3</a></dd>
+            <dd><a href="">Infor4</a></dd>
+            <dd><a href="">Infor5</a></dd>
+            <dd><a href="">Infor6</a></dd>
+          </dl>
+          <dl>
+            <dt>Información</dt>
+            <dd><a href="">Infor1</a></dd>
+            <dd><a href="">Infor2</a></dd>
+            <dd><a href="">Infor3</a></dd>
+            <dd><a href="">Infor4</a></dd>
+            <dd><a href="">Infor5</a></dd>
+            <dd><a href="">Infor6</a></dd>
+          </dl>
+          <dl>
+            <dt>Información</dt>
+            <dd><a href="">Infor1</a></dd>
+            <dd><a href="">Infor2</a></dd>
+            <dd><a href="">Infor3</a></dd>
+            <dd><a href="">Infor4</a></dd>
+            <dd><a href="">Infor5</a></dd>
+            <dd><a href="">Infor6</a></dd>
+          </dl>
+        </div>
+
+        <div class="modCopyright">
+          <div class="links">
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard dummy text
+            ever since the 1500s, when an unknown printer took a galley of type
+            and scrambled it to makewhen an unknown printer took a galley of
+            type and scrambled it to make
+          </div>
+          <div class="copyright">
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's <br />
+            Lorem Ipsum is simply dummy text of the printing
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
