--- a/f2/index.html
+++ b/f2/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/base.css" />
     <link rel="stylesheet" href="./css/common.css" />
+    <link rel="stylesheet" href="./css/index.css" />
     <link rel="shortcut icon" href="./favicon.ico" />
     <title>
       Aqui va el Nombre de la pagWeb -que es importante para los buscadores-
@@ -157,6 +158,25 @@
         </div>
       </div>
     </nav>
+
+    <!-- main start -->
+    <div class="w">
+      <div class="main">
+        <div class="focus">
+          <ul>
+            <li>
+              <img src="" alt="" />
+            </li>
+          </ul>
+        </div>
+        <div class="newsFlash">
+          <div class="news"></div>
+          <div class="lifeService"></div>
+          <div class="bargain"></div>
+        </div>
+      </div>
+    </div>
+    <!-- main end -->
 
     <footer class="footer">
       <div class="w">
