Finalización pagination_with_js. Pr

--- a/pagination_with_js/index.html
+++ b/pagination_with_js/index.html
@@ -77,6 +77,7 @@
           keyboard_arrow_right
         </li>
       </ul>
+      <script src="./index.js"></script>
     </div>
   </body>
 </html>
